# dss_capi

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.debian-builder  Makefile  Makefile.jvm  changelog.md  dss-runner.c  dss_capi.i  fix-jvm-bindings-license.sh  license.txt
.github/workflows/: build-commit-container.yml  build-linux.yml.txt  build-release.yml  build-snapshot.yml  build-windows.yml.txt  build-zepben.yaml  builds.yml
docs/: usage.md
include/: dss.hpp
lib/linux_x64/: .gitignore
rmqstream/: Cargo.toml
rmqstream/src/: lib.rs
src/: linux-x64.cfg
src/Common/: DSSClass.pas  ExportResults.pas  ShowResults.pas  Utilities.pas  ZepbenHC.pas
src/Meters/: EnergyMeter.pas  MemoryMap_lib.pas
src/Parser/: ParserDel.pas
zepben-extensions/: Makefile  README.md
zepben-extensions/rmqstream/: Cargo.toml
zepben-extensions/rmqstream/src/: lib.rs
zepben-extensions/src/: EnergyMeter.pb-c.c  rmqpush.c  utils.c
zepben-extensions/src/include/: EnergyMeter.pb-c.h  rmqpush.h  utils.h
zepben-extensions/src/proto/hc/opendss/: Diagnostics.pb-c.c  Diagnostics.pb-c.h  EnergyMeter.pb-c.c  EnergyMeter.pb-c.h  OpenDssReport.pb-c.c  OpenDssReport.pb-c.h  QueueMessage.pb-c.c  QueueMessage.pb-c.h
zepben-extensions/src/proto/zepben/protobuf/hc/opendss/: Diagnostics.pb-c.c  Diagnostics.pb-c.h  EnergyMeter.pb-c.c  EnergyMeter.pb-c.h  OpenDssReport.pb-c.c  OpenDssReport.pb-c.h
